--- a/rtk-demo/package.json
+++ b/rtk-demo/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.1"
+    "@reduxjs/toolkit": "^1.8.1",
+    "redux-logger": "^3.0.6"
   }
 }
