--- a/react-rtk-demo/package.json
+++ b/react-rtk-demo/package.json
@@ -11,7 +11,8 @@
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.27.2",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-redux": "^8.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
